--- a/Docker_JuypterLab/Dockerfile
+++ b/Docker_JuypterLab/Dockerfile
@@ -11,11 +11,11 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # Install dependencies including build tools
 RUN apt-get update 
-RUN apt-get install -y python3 python3-dev python3-pip supervisor 
+RUN apt-get install -y python3 python3.12-venv python3-dev python3-pip supervisor 
 
 RUN python3 -m pip install --break-system-packages \
     # --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host=files.pythonhosted.org \
-    jupyterlab
+    jupyterlab ipykernel
 
 # Expose necessary ports
 EXPOSE 8888
