--- a/Docker_JuypterLab/Dockerfile
+++ b/Docker_JuypterLab/Dockerfile
@@ -22,8 +22,14 @@ RUN pip install --upgrade jupyterlab --break-system-packages
 # Expose necessary ports
 EXPOSE 8888
 
+# Copy Test Code
+RUN mkdir /home/ubuntu/code
+COPY code/Test.conf /home/ubuntu/code/Test.ipynb
+
 # Copy Supervisor configuration
 COPY config/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+WORKDIR /home/ubuntu
 
 # Start Supervisor to manage services
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
